# ocr

./: .gitignore  CLAUDE.md  README.md  errors.jsonl  main.py  output.md  pyproject.toml
.planning/: PLAN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: phase1-wave3-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
src/ocr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ocr_batch/: __init__.py  __main__.py  cli.py  discovery.py  logger.py  models.py  processor.py  worker.py  writer.py
tests/: test_discovery.py  test_integration_e2e.py  test_logger.py  test_success_criteria.py
